# dspy-skills

./: .gitignore  README.md  main.py  pyproject.toml  skills_config.yaml
sample_skills/file-utils/: SKILL.md
sample_skills/file-utils/scripts/: compare_files.py  count_lines.py  file_stats.py  find_files.py
sample_skills/json-tools/: SKILL.md
sample_skills/json-tools/scripts/: diff_json.py  format_json.py  query_json.py  validate_json.py
sample_skills/network-check/: SKILL.md
sample_skills/network-check/scripts/: check_port.py  dns_lookup.py  ping_host.py
sample_skills/network-recon/: SKILL.md
sample_skills/pentest-commands/: SKILL.md
sample_skills/skill-creator/: SKILL.md
sample_skills/system-info/: SKILL.md
sample_skills/system-info/scripts/: cpu_info.py  disk_info.py  memory_info.py  process_list.py
sample_skills/web-fingerprint/: SKILL.md
sample_skills/web-fingerprint/scripts/: fetch_page.py
sample_skills/web-scraper/: SKILL.md
sample_skills/web-scraper/references/: selectors.md
sample_skills/web-scraper/scripts/: extract_links.py  extract_text.py  fetch_page.py
src/dspy_skills/: __init__.py  agent.py  config.py  errors.py  manager.py  models.py  parser.py  prompt.py  security.py  validator.py
src/dspy_skills/tools/: __init__.py  activate_skill.py  list_skills.py  read_resource.py  run_script.py
test_skills/asset-templates/: SKILL.md
test_skills/asset-templates/assets/: config.json  (+1 more)
test_skills/combined-resources/: SKILL.md
test_skills/reference-lookup/: SKILL.md
tests/integration/: conftest.py  test_resource_usage.py
(+4 files in other folders)
